server issues fixed

--- a/client/index.html
+++ b/client/index.html
@@ -10,6 +10,6 @@
 		<h2> Country name here: </h2>
 		<button id='search-btn'> Click here for artist ID </button>
 		<button id='trackz-btn'> Click here for trackz </button>
-		<script type='text/javascript' src='../scripts/index.js'></script>
+		<script type='text/javascript' src='/scripts/index.js'></script>
 	</body>
 </html>
